--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
     href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
 </head>
 <body>
-    
+    <!--Nav Bar-->
+    <header>
+        <a href="#">
+            <img src="img/everplant logo.png" alt="EVERPLANT Logo">
+        </a>
+    </header>
+
 
 
 
