Update menu icon
Added menu icon to navigation bar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
             <img src="img/everplant logo.png" alt="EVERPLANT Logo">
         </a>
     </header>
-
+    <!--Menu Icon-->
+    <i class='bxr  bx-menu-wider'></i> 
+    
 
 
 
