--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 <body>
     <!--Nav Bar-->
     <header>
-        <a href="#">
+        <a href="#" class="logo">
             <img src="img/everplant logo.png" alt="EVERPLANT Logo">
         </a>
-    </header>
-    <!--Menu Icon-->
-    <i class='bxr  bx-menu-wider'></i> 
+        <!--Menu Icon-->
+    <i class='bx  bx-menu-wider'></i> 
     <!--Links-->
     <ul class="navbar">
         <li><a href="#home">Home</a></li>
@@ -24,6 +23,13 @@
         <li><a href="#products">Products</a></li>
         <li><a href="#customers">Customers</a></li>
     </ul>
+    <!--Icons-->
+    <div class="header-icons">
+        <i class='bx  bx-cart'></i> 
+        <i class='bx  bx-search-alt' id="search-icon"></i> 
+    </div>
+    </header>
+    
 
 
 
