--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <a href="#" class="logo">
             <img src="img/everplant logo.png" alt="EVERPLANT Logo">
         </a>
-        <!--Menu Icon-->
-    <i class='bx  bx-menu-wider'></i> 
+    <!--Menu Icon-->
+    <i class='bx  bx-menu' id="menu-icon"></i> 
     <!--Links-->
     <ul class="navbar">
         <li><a href="#home">Home</a></li>
@@ -27,6 +27,10 @@
     <div class="header-icons">
         <i class='bx  bx-cart'></i> 
         <i class='bx  bx-search-alt' id="search-icon"></i> 
+    </div>
+    <!--search box-->
+    <div class="search-box">
+        <input type="search" placeholder="Search Here...">
     </div>
     </header>
     
