Update Home section
Added section tag and div tag for make home section

--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
         <input type="search" placeholder="Search Here...">
     </div>
     </header>
+    <!--Home-->
+    <section class="home" id="home">
+        <div class="home-text">
+            <h1>From Soil To Soil</h1>
+        </div>
+    </section>
 
    
 
