--- a/index.html
+++ b/index.html
@@ -36,8 +36,13 @@
     <!--Home-->
     <section class="home" id="home">
         <div class="home-text">
-            <h1>From Soil To Soil</h1>
+            <h1>From Soil To Soul</h1>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Libero, iusto sapiente perspiciatis perferendis, aspernatur neque error vero, dicta praesentium eligendi explicabo quibusdam nemo illum debitis.
+                Minus sunt odit cupiditate neque.</p>
+            <a href="#" class="btn">Shop Now</a>
         </div>
+        
     </section>
 
    
