Update img folder
Added home image into img folder

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                 Minus sunt odit cupiditate neque.</p>
             <a href="#" class="btn">Shop Now</a>
         </div>
-        
+        <div class="home-img">
+            
+        </div>
     </section>
 
    
