--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <a href="#" class="btn">Shop Now</a>
         </div>
         <div class="home-img">
-            
+            <img src="img/main.png" alt="">
         </div>
     </section>
 
