Update home section
Added description about the EVERPLANT

--- a/index.html
+++ b/index.html
@@ -37,9 +37,11 @@
     <section class="home" id="home">
         <div class="home-text">
             <h1>Welcome to everplant</h1>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Libero, iusto sapiente perspiciatis perferendis, aspernatur neque error vero, dicta praesentium eligendi explicabo quibusdam nemo illum debitis.
-                Minus sunt odit cupiditate neque.</p>
+            <p>We help you bring fresh, beautiful plants into your home, office, or garden with just a few clicks. 
+               Whether you're new to plants or already love them, we have the right ones for you. 
+               All our plants are carefully chosen, packed with care, and delivered safely to your door. 
+               We also give you easy tips to take care of them, so your plants stay happy and healthy. 
+               Start your green journey today with EVERPLANT and make your space come alive with nature.</p>
             <a href="#" class="btn">Shop Now</a>
         </div>
         <div class="home-img">
