Update home section
Added css to slogan in home section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <section class="home" id="home">
         <div class="home-text">
             <h1>Welcome to everplant</h1>
-            <h5>From Soil to Soul</h5>
+            <h5>From Soil to Soul....</h5>
             <p>We help you bring fresh, beautiful plants into your home, office, or garden with just a few clicks. 
                Whether you're new to plants or already love them, we have the right ones for you. 
                All our plants are carefully chosen, packed with care, and delivered safely to your door. 
