Create about section
Implemented about section

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
             <img src="img/main.png" alt="">
         </div>
     </section>
+    <!--About-->
+    <section class="about" id="about">
+        
+    </section>
 
    
 
