--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
     </section>
     <!--About-->
     <section class="about" id="about">
+        <div class="about-img">
+            <img src="img/main.png" alt="">
+        </div>
         
     </section>
 
