Update about section
Added about section topic

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
         <div class="about-img">
             <img src="img/main.png" alt="">
         </div>
-        
+        <div class="about-text">
+            <h2>Our History</h2>
+            
+        </div>
     </section>
 
    
