--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <h2>Our History</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas voluptatum suscipit porro fugiat laborum sunt illum temporibus voluptatibus natus! Adipisci corrupti totam praesentium nam eveniet ipsa obcaecati perspiciatis eligendi eum.</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem, architecto dignissimos. Soluta, reiciendis voluptatem. Ratione pariatur totam vero blanditiis dolorum enim sed commodi asperiores odit eius, eveniet voluptatem voluptas ipsum?</p>
-            
+            <a href="#" class="btn">Learn More</a>
         </div>
     </section>
 
