--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!--About-->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="img/main.png" alt="">
+            <img src="img/about.jpg" alt="">
         </div>
         <div class="about-text">
             <h2>Our History</h2>
