--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
     <!--Home-->
     <section class="home" id="home">
         <div class="home-text">
-            <h1>Welcome to everplant</h1>
+            <h1 class="heading-zero">Welcome to</h1>
+            <h1 class="heading-one">ever</h1>
+            <h1 class="heading-two">plant</h1>
             <h5>From Soil to Soul....</h5>
             <p>We help you bring fresh, beautiful plants into your home, office, or garden with just a few clicks. 
                Whether you're new to plants or already love them, we have the right ones for you. 
