CHange Navigation bar section
Changed nav bar alt

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--Nav Bar-->
     <header>
         <a href="#" class="logo">
-            <img src="img/everplant logo.png" alt="EVERPLANT Logo">
+            <img src="img/everplant logo.png" alt="EVERPLANT LOGO">
         </a>
     <!--Menu Icon-->
     <i class='bx  bx-menu' id="menu-icon"></i> 
