Update home section

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <input type="search" placeholder="Search Here...">
     </div>
     </header>
-    <!--Hom-->
+    <!--Home-->
     <section class="home" id="home">
         <div class="home-text">
             <h1 class="heading-zero">Welcome to</h1>
