--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <img src="img/main.png" alt="">
         </div>
     </section>
-    <!--Abou-->
+    <!--About-->
     <section class="about" id="about">
         <div class="about-img">
             <img src="img/about.jpg" alt="">
