Update icon section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <li><a href="#products">Products</a></li>
         <li><a href="#customers">Customers</a></li>
     </ul>
-    <!--Icons-->
+    <!--Icon-->
     <div class="header-icons">
         <i class='bx  bx-cart'></i> 
         <i class='bx  bx-search-alt' id="search-icon"></i> 
